--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+### Java template
 # Compiled class file
 *.class
 
@@ -21,3 +22,24 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# OTHER
+.DS_Store
+*.iml
+*.ipr
+*.iws
+*.orig
+*.rej
+**/.keep
+*.sdf
+*.suo
+*.vcxproj.user
+.idea
+.mvn
+.svn
+.classpath
+.project
+.settings
+target
+output
+build
